--- a/servicios.html
+++ b/servicios.html
@@ -35,7 +35,7 @@
     <header class="sticky-top header">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand " href="#">
+          <a class="navbar-brand " href="index.html">
             <img width="150" height="100" src="img/logo2.svg" alt="" />
           </a>
           <button
@@ -52,13 +52,13 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav text-center fw-bold fs-1">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
+                <a class="nav-link" href="servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">Galeria</a>
