--- a/galeria.html
+++ b/galeria.html
@@ -18,6 +18,10 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/20fed15e3c.js"
       crossorigin="anonymous"
@@ -60,18 +64,12 @@
           >
             <ul class="navbar-nav text-center fw-bold fs-1">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#seccion-2">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#seccion-3">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="galeria.html">Galeria</a>
+                <a class="nav-link active" href="galeria.html">Galeria</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">Contactos</a>
@@ -82,82 +80,19 @@
       </nav>
     </header>
     <!-- =============================================================================================================================== -->
-    <!-- HOME -->
-    <!-- =============================================================================================================================== -->
-    <main class="container__main">
-      <div>
-        <div class="position-relative">
-          <h1 class="main-h1 display-1 w-100 text-center position-absolute">
-            <span class="beauty"> Beauty </span>
-            <span class="brow"> Brow</span> <span class="bar"> Bar </span>
-          </h1>
-        </div>
-        <div class="imag">
-          <img src="img/qwe.svg" class="img-fluid w-100 h-100" alt="" />
-        </div>
-      </div>
-    </main>
-    <!-- =============================================================================================================================== -->
-    <!-- NOSOTROS -->
-    <!-- =============================================================================================================================== -->
-    <section class="nosotros p-3">
-      <div id="seccion-2" class="container__nosotros">
-        <div class="row aling-items-center justify-content-between text-center">
-          <div class="col-md">
-            <img class="img-fluid" src="img/nosotros.jpg" alt="" />
-          </div>
-          <div class="col-md p-5 nosotros__font">
-            <h3 class="fs-1">
-              <span class="beauty">Beauty</span> <span class="brow">Brow</span>
-              <span class="bar">Bar</span>
-            </h3>
-            <p class="p1 lead fs-2">
-              Comienza hoy mismo a escribir la historia de tu éxito. Fíjate tus
-              <br class="d-none d-lg-block" />
-              metas y síguelas hasta que se conviertan en realidad.
-              <br class="d-none d-lg-block" />
-              Tú tienes que creer en ello aún antes de verlo.
-              <br class="d-none d-lg-block" />
-              Cualquier cosa que tu mente pueda recibir y entender, se puede
-              lograr.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- =============================================================================================================================== -->
     <!-- SERVICIOS -->
     <!-- =============================================================================================================================== -->
-    <section id="seccion-3" class="servicios text-center">
-      <h1 class="servicios_h1 display-1">Nuestros Servicios</h1>
-      <div class="row p-5 pt-0">
-        <div class="col">
-          <div class="card">
-            <img src="img/111.svg" class="card-img-top" alt="" />
-            <div class="card-body card1">
-              <h1>Depilacion con hilo, Rostro Completo</h1>
-              <a href="precios.html"><button>Precios</button></a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/laminado.svg" class="card-img-top" alt="" />
-            <div class="card-body card2">
-              <h1>Diseño, Perfilado & Laminado de cejas</h1>
-              <a href="precios.html"><button>Precios</button></a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/pestañas.svg" class="card-img-top" alt="" />
-            <div class="card-body card3">
-              <h1>Lifting & Tintes de pestañas</h1>
-              <a href="precios.html"><button>Precios</button></a>
-            </div>
-          </div>
-        </div>
+    <section class="container">
+      <div class="gallery_container">
+        <div class="picture-1 grid-picture"></div>
+        <div class="picture-2 grid-picture"></div>
+        <div class="picture-3 grid-picture"></div>
+        <div class="picture-4 grid-picture"></div>
+        <div class="picture-5 grid-picture"></div>
+        <div class="picture-6 grid-picture"></div>
+        <div class="picture-7 grid-picture"></div>
+        <div class="picture-8 grid-picture"></div>
+        <div class="picture-9 grid-picture"></div>
       </div>
     </section>
     <!-- =============================================================================================================================== -->
