cambio de nosotros

--- a/index.html
+++ b/index.html
@@ -112,14 +112,19 @@
               <span class="bar">Bar</span>
             </h3>
             <p class="p1 lead fs-2">
-              Comienza hoy mismo a escribir la historia de tu éxito. Fíjate tus
+              Estamos trabajando en un sueño,
               <br class="d-none d-lg-block" />
-              metas y síguelas hasta que se conviertan en realidad.
+              uno que hace un tiempo atras no creiamos posible.
               <br class="d-none d-lg-block" />
-              Tú tienes que creer en ello aún antes de verlo.
+              Siempre nos hicieron creer que solo los cumplen otro tipo de personas..
               <br class="d-none d-lg-block" />
-              Cualquier cosa que tu mente pueda recibir y entender, se puede
-              lograr.
+              Y aca estamos, dos pares de hermanas (dos tias y sus dos sobrinas)
+              <br class="d-none d-lg-block" />
+              poiendo lo mejor de nosotros, construyendo nuestra pasion
+              <br class="d-none d-lg-block" />
+              en una profesion. aprendiendo y mejorando, por un sueño.
+              <br class="d-none d-lg-block" />
+              Nuestro sueños
             </p>
           </div>
         </div>
