cambio en el color del titulo

--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
     <main class="container__main">
       <div>
         <div class="position-relative">
-          <h1 class="main-h1 display-1 w-100 text-center position-absolute">
-            <span class="beauty"> Beauty </span>
-            <span class="brow"> Brow</span> <span class="bar"> Bar </span>
+          <h1 class="main-h1 display-1 w-100 text-center position-absolute text-decoration-underline">
+            Beauty Brow Bar
           </h1>
         </div>
         <div class="imag">
