--- a/precios.html
+++ b/precios.html
@@ -52,7 +52,15 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav text-center fw-bold fs-1">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="precios.html">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="galeria.html">Galeria</a>
@@ -72,9 +80,9 @@
       <div class="pb-5 text-center">
         <h1 class="text-title"><span class="beauty"> Beauty </span> <span class="brow"> Brow</span> <span class="bar"> Bar </span></h1>
       </div>
-      <div class="container_servicios">
+      <div class=" container_servicios d-flex row">
         <section class="seccion-1 col-lg-6">
-          <div class="servicios_precios">
+          <div class="servicios_precios ">
               <div class="text-center"><h2 class="lista display-1 bg-light border-dark border-3 border-end">Lista De Precios</h2></div>
               <div class="container-1 p-2 text-center">
                 <div class="border-end border-dark border-3">
